gccida/g0/expand_call
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2539:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2540:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2549:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2554:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2555:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2556:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2565:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2587:5: error: expected ';' after expression
tree expa; // [rsp+18h] [rbp-238h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2587:6: error: use of undeclared identifier 'expa'
tree expa; // [rsp+18h] [rbp-238h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2602:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode save_mode; // [rsp+ACh] [rbp-1A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2603:5: error: expected ';' after expression
tree nt; // [rsp+B0h] [rbp-1A0h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2603:6: error: use of undeclared identifier 'nt'
tree nt; // [rsp+B0h] [rbp-1A0h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2619:5: error: expected ';' after expression
tree var; // [rsp+120h] [rbp-130h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2619:6: error: use of undeclared identifier 'var'
tree var; // [rsp+120h] [rbp-130h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2623:5: error: expected ';' after expression
tree funtype; // [rsp+140h] [rbp-110h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2623:6: error: use of undeclared identifier 'funtype'
tree funtype; // [rsp+140h] [rbp-110h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2632:5: error: expected ';' after expression
tree fndecl; // [rsp+180h] [rbp-D0h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2632:6: error: use of undeclared identifier 'fndecl'
tree fndecl; // [rsp+180h] [rbp-D0h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/calls.c:2642:5: error: expected ';' after expression
tree p; // [rsp+1B8h] [rbp-98h] 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_call/src/obj/calls.o] Error 1
